Your commit message

--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,21 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependency directories
 node_modules
+
+# Build outputs
 dist
 dist-ssr
+build
+
+# Local environment files
 *.local
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Editor directories and files
 .vscode/*
@@ -22,3 +33,24 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# TypeScript
+*.tsbuildinfo
+
+# Miscellaneous
+*.out
+*.tmp
+*.swp
+*.bak
+
+# Mac system files
+*.DS_Store
+
+# Windows system files
+Thumbs.db
+
+# GitHub Pages
+/gh-pages
+
+# Next.js build output
+.next/
