--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
@@ -30,6 +31,6 @@
     "gh-pages": "^6.1.1",
     "prettier": "^3.3.3",
     "typescript": "^5.2.2",
-       "vite": "^5.3.1"
+    "vite": "^5.3.1"
   }
 }
