Updated tsconfig.json to include all files in src directory

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,18 @@
     "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true
   },
-  "include": ["src", "vite.config.ts"],
+  "include": [
+    "src/**/*",         // Includes all files in 'src' and its subdirectories
+    "vite.config.ts"    // Includes the Vite configuration
+  ],
+  "exclude": [
+    "node_modules",     // Exclude 'node_modules' directory
+    "dist",             // Exclude 'dist' directory to avoid compiled files
+    ".tmp",             // Exclude temporary files if there are any
+    "tests",            // Optional: if you have a test directory, you can exclude it here
+    "**/*.test.ts",     // Exclude test files if needed
+    "**/*.spec.ts"      // Optional: Exclude test files if you follow a specific naming convention for test files
+  ],
   "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.tsbuildinfo",
   "composite": true
 }
